--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -9,10 +9,13 @@
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "seed": "tsx src/scripts/seed.ts",
+  "reset:seed": "cross-env RESET_ALL=1 FORCE_SEED=1 tsx src/scripts/seed.ts",
     "lint": "eslint ."
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -24,9 +27,10 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "eslint": "^8.57.0",
-    "tsx": "^4.19.2",
+    "cross-env": "^7.0.3",
+    "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "prisma": "^5.18.0"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.2"
   }
 }
